# ETI-GP-SS12-P5

./: .gitignore  .mailmap  README  TODO  init.sh  mctracer-vg370.patch  mctracer-watchdog.sh
example/: Makefile  batman.c  jc.c  mm.c  mm_tr.c  redblack-g  redblack.c  redblack_ncurses.c  redblack_tr.c
gui/: build.xml
gui/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
gui/nbproject/private/: private.properties
gui/src/controller/: Controller.java  EtisFileFilter.java
gui/src/data/: DataInput.java  DataReader.java  DummyInput.java  MatrixHeader.java  Pattern.java  RelativeJump.java  Sequence.java  StandardInput.java
gui/src/view/: ArrowPanel.form  ArrowPanel.java  ArrowStatisticsPanel.form  ArrowStatisticsPanel.java  Bundle.properties  DetailedOverallStatisticsPanel.form  DetailedOverallStatisticsPanel.java  EtiGP.java  MainFrame.form  MainFrame.java  MatrixPanel.java  OverallStatisticsPanel.form  OverallStatisticsPanel.java  PatternDetailedPanel.form  PatternDetailedPanel.java  PatternDetailsPanel.form  PatternDetailsPanel.java  PatternOverviewPanel.form  PatternOverviewPanel.java  PatternRepresentationPanel.form  PatternRepresentationPanel.java  PatternStatisticsPanel.form  PatternStatisticsPanel.java  PatternsPanel.form  PatternsPanel.java  PieChartPanel.java  PieContainer.java  RelativeAccessPanel.java  RelativeJumpPanel.form  RelativeJumpPanel.java  SequencesPanel.form  SequencesPanel.java  StatisticsPanel.form  StatisticsPanel.java  TextIcon.java
mods-for-metadata-passing/: mctracer.h  simplesim.c  tr_main.c  tr_shmevents.h
simplesim/: Makefile  README  simplesim  simplesim.c  tr_shmevents.h
simplesim/shmlib/: shm_common.h  shm_consumer.c  shm_consumer.h
tex/: Makefile
tex/common/: macros.tex  packages.tex
tex/docs/common/: patseq-intentions.tex  terminology.tex  title.tex
tex/docs/dev/: main.tex
tex/docs/usr/: abstract.tex  main.tex
tex/presentation/: beamerstyle.tex  main.tex
tex/presentation/examples/: examples.tex  jacobi.tex  mm.tex  redblack.tex
valgrind-source/: Makefile.am  configure.in
valgrind-source/coregrind/: Makefile.am
valgrind-source/mctracer/: Makefile.am  filemanip.h  mctracer.h  shm_common.h  shm_consumer.c  shm_vgprod.c  shm_vgprod.h  simplesim.c  simplesim.h  tr_consumer.c  tr_main.c  tr_sequences.c  tr_sim.c  tr_stats.c  tr_write.c
valgrind-source/mctracer/docs/: tr-manual.xml
(+37 files in other folders)
